# ConnTool

./: .gitignore  CMakeLists.txt  ConnectionTool.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  cert.pem  dialog.ui  key.pem  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openconnectiondialog.cpp  openconnectiondialog.h  openssl.cnf
